--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script src="../node_modules/pixi.js/dist/pixi.min.js"></script>
-  <script src="main.js" type="module"></script>
+  <script src="/dist/my-lib.mjs"></script>
 </body>
 </html>
 
