--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script src="/dist/my-lib.mjs"></script>
+  <script src="/dist/main.bundle.mjs"></script>
 </body>
 </html>
 
