Added a main menu

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2D Game</title>
+  <title>Knight in the Woods</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script src="/dist/main.bundle.mjs"></script>
+  <script src="/dist/main.bundle.mjs" type="module"></script>
 </body>
 </html>
 
